@@ -199,19 +199,6 @@ sub start {
     if ($info{'logfile'}) {
         push @options, ('-l', $info{'logfile'});
         # remember current size of the log
-        unless (-e $info{'logfile'}) {
-            open L, '>', $info{'logfile'} or 
-                error 'Could not create log file ' . $info{'logfile'};
-            chmod 0640, $info{'logfile'};
-            my $g;
-            if ($info{'owneruid'} < 500) {
-                $g = (getgrnam 'adm')[2];
-            } else {
-                $g = $info{'ownergid'};
-            }
-            chown $info{'owneruid'}, $g, $info{'logfile'};
-            close L;
-        }
         $logsize = (stat $info{'logfile'})[7];
     }
 
@@ -360,6 +347,21 @@ unless (getpwuid $info{'owneruid'}) {
 }
 unless (getgrgid $info{'ownergid'}) {
     error 'The cluster is owned by group id '.$info{'ownergid'}.' which does not exist any more'
+}
+
+# recreate missing log file
+if ($info{'logfile'} && ! -e $info{'logfile'}) {
+    open L, '>', $info{'logfile'} or 
+	error 'Could not create log file ' . $info{'logfile'};
+    chmod 0640, $info{'logfile'};
+    my $g;
+    if ($info{'owneruid'} < 500) {
+	$g = (getgrnam 'adm')[2];
+    } else {
+	$g = $info{'ownergid'};
+    }
+    chown $info{'owneruid'}, $g, $info{'logfile'};
+    close L;
 }
 
 if ($> == 0) {
