@@ -25,6 +25,9 @@ postgresql-common (103) UNRELEASED; urgency=low
   * pg_createcluster: Make /etc/postgresql/<version> and
     /var/lib/postgresql/<version> owned by 'postgres', so that they can be
     administrated with 'postgres' privileges. (LP: #236704)
+  * t/020_create_sql_remove.t: Check that a missing log file is recreated by
+    pg_ctlcluster (if it has enough permissions).
+  * pg_ctlcluster: Make re-creation of log file actually work. (LP: #391119)
 
  -- Martin Pitt <mpitt@debian.org>  Wed, 30 Dec 2009 10:20:41 +0100
 
